refactor odo form and integrate Maskito for input handling
- Renamed AddOdoEntryComponent to AddOdoFormComponent and moved form template to its own file for better organization.
- Added Maskito input directive to improve UX for numeric fields in several components, including leasing contract and odo form.
- Minor UI and style enhancements were applied for better layout clarity.

--- a/src/app/pages/dashboard/dashboard-page.component.html
+++ b/src/app/pages/dashboard/dashboard-page.component.html
@@ -14,6 +14,8 @@
       <tu-summary [totalKm]="latestOdoEntry!.odo" [difference]="analyticsData.differenceFromExpected"
                   [differenceInDays]="analyticsData.idleDaysToReachExpectedKm" />
     </div>
+  } @else {
+    <tu-empty-odo-state (addEntryClicked)="openEntryModal()" />
   }
   <div>
     <tu-leasing-chart [analyticsData]="analyticsData" />
@@ -30,7 +32,7 @@
     @if (modal.open && dialogComponent()) {
       @switch (dialogComponent()) {
         @case ('add') {
-          <tu-add-odo-entry (submitted)="closeModal()" (canceled)="closeModal()" />
+          <tu-add-odo-form (submitted)="closeModal()" (canceled)="closeModal()" />
         }
         @case ('leasingContract') {
           <tu-leasing-contract
