--- a/src/app/features/leasing/leasing-contract/leasing-contract.component.html
+++ b/src/app/features/leasing/leasing-contract/leasing-contract.component.html
@@ -1,38 +1,42 @@
 <form #form="ngForm" (ngSubmit)="submit()">
   <div class="flex flex-col gap-2">
-    <label class="form-control w-full">
+    <h3 class="text-2xl self-start mb-4">Leasing Contract</h3>
+    <div>
       <div class="label">
-        <span class="label-text">Per year</span>
+        <span class="label-text">KMs per year</span>
+      </div>
+      <label class="input input-bordered w-full flex items-center gap-2">
+        <input
+          class="grow text-right"
+          required
+          tuKmInput
+          name="yearly"
+          [(ngModel)]="yearlyKmLimit"
+        />
         <span class="label-text">km</span>
-      </div>
-      <input
-        class="input input-bordered w-full"
-        required
-        type="number"
-        name="yearly"
-        [(ngModel)]="yearlyKmLimit"
-      />
-    </label>
-    <label class="form-control w-full">
+      </label>
+    </div>
+    <div>
       <div class="label">
-        <span class="label-text">Starting</span>
+        <span class="label-text">Odometer at start</span>
+      </div>
+      <label class="input input-bordered w-full flex items-center gap-2">
+        <input
+          class="grow text-right"
+          required
+          tuKmInput
+          name="startingKm"
+          [(ngModel)]="initialOdo"
+        />
         <span class="label-text">km</span>
-      </div>
-      <input
-        class="input input-bordered w-full"
-        required
-        type="number"
-        name="startingKm"
-        [(ngModel)]="initialOdo"
-      />
-    </label>
+      </label>
+    </div>
     <label class="form-control w-full">
       <div class="label">
-        <span class="label-text">Starting</span>
-        <span class="label-text">Date</span>
+        <span class="label-text">Start of contract</span>
       </div>
       <input
-        class="input input-bordered w-full"
+        class="input input-bordered w-full text-right"
         required
         #startDateControl="ngModel"
         type="date"
@@ -42,13 +46,15 @@
       />
       @if (startDateControl.hasError('required')) {
         <div class="label">
-            <span class="label-text text-red-500">Required</span>
+          <span class="label-text text-red-500">Required</span>
         </div>
       }
     </label>
   </div>
   <div class="flex items-center justify-end mt-8 gap-2">
-    <button type="button" (click)="cancel()" class="btn btn-ghost">Cancel</button>
+    <button type="button" (click)="cancel()" class="btn btn-ghost">
+      Cancel
+    </button>
     <button type="submit" class="btn btn-primary">Save</button>
   </div>
 </form>
