fix bug with strings instead of numbers from maskito inputs

--- a/src/app/features/leasing/leasing-contract/leasing-contract.component.html
+++ b/src/app/features/leasing/leasing-contract/leasing-contract.component.html
@@ -12,6 +12,7 @@
           tuKmInput
           name="yearly"
           [(ngModel)]="yearlyKmLimit"
+          inputmode="numeric"
         />
         <span class="label-text">km</span>
       </label>
@@ -27,6 +28,7 @@
           tuKmInput
           name="startingKm"
           [(ngModel)]="initialOdo"
+          inputmode="numeric"
         />
         <span class="label-text">km</span>
       </label>
