--- a/src/app/features/odo/add-odo-form.component.html
+++ b/src/app/features/odo/add-odo-form.component.html
@@ -22,6 +22,7 @@
       required
       class="grow text-right"
       tuKmInput
+      inputmode="numeric"
     />
     <div class="label">
       <span class="label-text">km</span>
